# C_TwitchChatbot

./: CMakeLists.txt  functions.h  main.c
src/: connect.c  data.c
src/libarys/curl/lib/: libcurl_a.lib
